Fixed more footer gaps

--- a/css/finishpay.css
+++ b/css/finishpay.css
@@ -4,7 +4,7 @@
   position:absolute;
   top:100px;
   width:100%;
-  height:68rem;
+  height:67rem;
   background:#0D0D0D;
   z-index:-1;
 }
